Add footer and update contact links with icons

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EL CAMINO - Live Earth</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="https://i.postimg.cc/s29Nf1fd/image.png" type="image/png">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -40,10 +43,20 @@
 
 
     <div class="contact-bubbles">
-        <a href="https://wa.me/85585480892" target="_blank" class="contact-bubble whatsapp">Whatsapp</a>
-        <a href="tel:+6282299688063" class="contact-bubble tele">Telegram</a>
-        <a href="https://teams.microsoft.com/l/chat/0/0?users=phpradanickyy@gmail.com" target="_blank" class="contact-bubble teams">Teams</a>
-    </div>
+    <a href="https://wa.me/85585480892" target="_blank" class="contact-bubble whatsapp">
+        <img src="https://i.postimg.cc/FRkGdRm2/whatsapp.png" alt="Whatsapp" class="contact-icon">
+        Whatsapp
+    </a>
+    <a href="tel:+6282299688063" class="contact-bubble tele">
+        <img src="https://i.postimg.cc/5ynmDFmX/telegram-(1).png" alt="Telegram" class="contact-icon">
+        Telegram
+    </a>
+    <a href="https://teams.microsoft.com/l/chat/0/0?users=phpradanickyy@gmail.com" target="_blank" class="contact-bubble teams">
+        <img src="https://i.postimg.cc/4xr1CGpL/business.png" alt="Teams" class="contact-icon">
+        Teams
+    </a>
+</div>
+
 
 
     <div class="disclaimer">
@@ -56,5 +69,9 @@
 
 
 </body>
-</html>
 
+<footer class="footer">
+    © 2025 ELCAMINO EXCH
+</footer>
+
+</html>
