Replace telephone link with Telegram link

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <img src="https://i.postimg.cc/FRkGdRm2/whatsapp.png" alt="Whatsapp" class="contact-icon">
         Whatsapp
     </a>
-    <a href="tel:+6282299688063" class="contact-bubble tele">
+    <a href="https://t.me/elcaminoxx" class="contact-bubble tele">
         <img src="https://i.postimg.cc/5ynmDFmX/telegram-(1).png" alt="Telegram" class="contact-icon">
         Telegram
     </a>
