Change default rate value in index.html
Updated default rate value to '-' in the HTML.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 
 
     <div class="content">
-        <h1>EL CAMINO EXCH</h1>
-        <p class="tagline">💲 JUAL BELI DOLLAR – FAST • AMAN • TERPERCAYA 💲</p>
-        <p class="rate">RATE : Rp16,950</p>
-        <p class="last-updated">Last Updated : -</p>
+    <h1>EL CAMINO EXCH</h1>
+    <p class="tagline">💲 JUAL BELI DOLLAR – FAST • AMAN • TERPERCAYA 💲</p>
+    <p class="rate">RATE : -</p> <!-- ganti nilai default 16,950 jadi - -->
+    <p class="last-updated">Last Updated : -</p>
     </div>
+
 
     <div class="calculator">
         <h2>Konversi Harga Dollar</h2>
