Fix HTML formatting and ensure proper closing tag

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="content">
     <h1>EL CAMINO EXCH</h1>
     <p class="tagline">💲 JUAL BELI DOLLAR – FAST • AMAN • TERPERCAYA 💲</p>
-    <p class="rate">RATE : -</p> <!-- ganti nilai default 16,950 jadi - -->
+    <p class="rate">RATE : -</p>
     <p class="last-updated">Last Updated : -</p>
     </div>
 
