--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 
 <body>
-    <video autoplay muted loop playsinline id="bg-video">
-        <source src="https://cdn.pixabay.com/video/2016/03/31/2619-865412755_large.mp4" type="video/mp4">
+    <video id="bg-video" autoplay muted loop playsinline>
+      <source src="https://cdn.pixabay.com/video/2016/03/31/2619-865412755_large.mp4" type="video/mp4">
+      Your browser does not support HTML5 video.
     </video>
 
 
