Add logo image and tagline to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EL CAMINO EXCH</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://i.postimg.cc/s29Nf1fd/image.png" type="image/png">
@@ -19,11 +20,13 @@
 
 
     <div class="content">
-    <h1>EL CAMINO EXCH</h1>
+    <img src="https://i.postimg.cc/j2zCTZmR/image.png" alt="EL CAMINO EXCH" class="logo">
+    <p class="tagline2">EL CAMINO EXCH</p>
     <p class="tagline">💲 JUAL BELI DOLLAR – FAST • AMAN • TERPERCAYA 💲</p>
     <p class="rate">RATE : -</p>
     <p class="last-updated">Last Updated : -</p>
     </div>
+
 
 
     <div class="calculator">
