--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <img src="https://i.postimg.cc/j2zCTZmR/image.png" alt="EL CAMINO EXCH" class="logo">
     <p class="tagline2">EL CAMINO EXCH</p>
     <p class="tagline">💲 JUAL BELI DOLLAR – FAST • AMAN • TERPERCAYA 💲</p>
-    <p class="rate">RATE : -</p>
-    <p class="last-updated">Last Updated : -</p>
+    <p class="rate">RATE : ◌</p>
+    <p class="last-updated">Last Updated : ◌</p>
     </div>
 
 
