--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nabla&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://i.postimg.cc/s29Nf1fd/image.png" type="image/png">
 </head>
@@ -20,7 +23,7 @@
 
     <div class="content">
     <img src="https://i.postimg.cc/j2zCTZmR/image.png" alt="EL CAMINO EXCH" class="logo">
-    <p class="tagline2">EL CAMINO EXCH</p>
+    <p class="tagline2">EL CAMINO EXCHANGE</p>
     <p class="tagline">💲 JUAL BELI DOLLAR – FAST • AMAN • TERPERCAYA 💲</p>
     <p class="rate">RATE : ◌</p>
     <p class="last-updated">Last Updated : ◌</p>
